[emacs] Silence reference to free variable warning

--- a/emacs.org
+++ b/emacs.org
@@ -7487,6 +7487,8 @@ Stavrou)]].
       (lambda ()
         (set-face-attribute 'default nil :height height))))
 
+  (defvar moody-mode-line-height)
+
   (defun prepcast-prep-moody ()
     "Prepare moody for screencasting."
     (let ((height moody-mode-line-height))
