--- a/emacs.org
+++ b/emacs.org
@@ -8664,9 +8664,8 @@ current theme.
   (defun koek-thm/update-frame-theme-variant-all ()
     "Update theme variant of all frames."
     (let ((dark (koek-thm/darkp)))
-      (mapc (lambda (frame)
-              (koek-thm/set-frame-theme-variant frame dark))
-            (frame-list))))
+      (dolist (frame (frame-list))
+        (koek-thm/set-frame-theme-variant frame dark))))
 
   (add-hook 'after-make-frame-functions #'koek-thm/update-frame-theme-variant)
   (add-hook 'koek-thm/enable-hook #'koek-thm/update-frame-theme-variant-all)
