[emacs] Enable lin in magit-log-mode

--- a/emacs.org
+++ b/emacs.org
@@ -3465,8 +3465,8 @@ For more information, see =man 5 hunspell=.
     :ensure t
     :hook
     ((tabulated-list-mode ibuffer-mode dired-mode archive-mode tar-mode
-      git-rebase-mode occur-mode grep-mode proced-mode mu4e-headers-mode
-      elfeed-search-mode bongo-playlist-mode)
+      magit-log-mode git-rebase-mode occur-mode grep-mode proced-mode
+      mu4e-headers-mode elfeed-search-mode bongo-playlist-mode)
      . lin-mode)
     :preface
     (defun koek-lin/reconfigure-for-wdired ()
